Update form & security headers

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -16,7 +16,7 @@ import ErrorMessage from "./ErrorMessage.astro";
     </div>
 
     <form
-      action="https://formsubmit.co/8b3ef32a81a2f8b2b736bf54169486ab"
+      action="https://formsubmit.co/info@trvepeak.studio"
       id="contact-form"
       method="POST"
     >
