Remove most stuff, keeping it lean

--- a/src/components/BackToTop.astro
+++ b/src/components/BackToTop.astro
@@ -14,6 +14,12 @@ import arrow from "@images/arrow-upward.svg";
     position: fixed;
     right: var(--space-xs);
   }
+
+  a:hover,
+  a:focus,
+  a:focus-visible {
+    outline-color: #fbd400;
+  }
 </style>
 
 <script>
