--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,8 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import Intro from "../components/Intro.astro";
-import Work from "../components/Work.astro";
-import Footer from "../components/Footer.astro";
+import Intro from "@components/Intro.astro";
+import Work from "@components/Work.astro";
+import Footer from "@components/Footer.astro";
 ---
 
 <Layout title="Trve Peak Studio - Recording, editing and mixing">
