--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,7 +11,7 @@ const { title } = Astro.props;
 const metaData = {
   keywords: "recording, editing, mixing, restoration, mastering",
   description:
-    "Project studio based in Nuremberg, Germany. Offering services such as recording, editing and mixing.",
+    "Project studio based in Nuremberg, Germany. Services: Producing, Recording, editing, mixing and mastering.",
   imageType: "image/png",
   imageWidth: "1600",
   imageHeight: "882",
