--- a/src/components/Work.astro
+++ b/src/components/Work.astro
@@ -143,7 +143,11 @@ const work = [
     <h2>Selected works</h2>
     <p>
       Here you can find a selection of records I'm particularly proud of. Click
-      on the artwork to listen to it on Spotify (external link).
+      on the artwork to listen to it on Spotify (external link). Find even more
+      music on my <a
+        href="https://tidal.com/browse/playlist/561b6f61-788e-40f5-9e50-befb68e4e180"
+        >Tidal playlist</a
+      > (external link).
     </p>
 
     <ul class="smol-css-grid primary" role="list">
