--- a/src/components/BackToTop.astro
+++ b/src/components/BackToTop.astro
@@ -18,7 +18,7 @@ import arrow from "@images/arrow-upward.svg";
   a:hover,
   a:focus,
   a:focus-visible {
-    outline-color: #fbd400;
+    outline-color: var(--yellow);
   }
 </style>
 
