--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -18,8 +18,11 @@ import logo from "@images/logo-full.svg";
         >🇩🇪</span
       > Offering the following services: <mark
         >Producing, recording, editing, mixing &amp; mastering</mark
-      >. Get in touch via <a href="mailto:info@trvepeak.studio">e-mail</a> or <a
-        rel="me"
+      >. Get in touch via <a
+        href="mailto:info@trvepeak.studio"
+        rel="noopener noreferrer">e-mail</a
+      > or <a
+        rel="me noopener noreferrer"
         href="https://mastodon.social/@trvepeakstudio">Mastodon</a
       >!
     </p>
