--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,9 @@ import Work from "@components/Work.astro";
 import Footer from "@components/Footer.astro";
 ---
 
-<Layout title="Trve Peak Studio - Recording, editing and mixing">
+<Layout
+  title="Trve Peak Studio - Producing, recording, editing, mixing and mastering"
+>
   <header>
     <a class="visually-hidden" href="#main">Skip to main content</a>
     <Intro />
