Update CSS & dependencies

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -11,8 +11,8 @@ const currentYear = new Date().getFullYear();
 
 <style>
   footer {
-    background: var(--black);
-    color: var(--white);
+    background: light-dark(var(--black), var(--white));
+    color: light-dark(var(--white), var(--black));
     padding: var(--space-m);
     text-align: center;
   }
