--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import Footer from "@components/Footer.astro";
 ---
 
 <Layout
-  title="Trve Peak Studio - Producing, recording, editing, mixing and mastering"
+  title="Trve Peak Studio - Recording, mixing, mastering, editing & producing"
 >
   <header>
     <a class="visually-hidden" href="#main">Skip to main content</a>
