--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,7 +3,7 @@
   font-family: "Lato";
   font-style: normal;
   font-weight: 700;
-  src: url("../fonts/lato-v24-latin-700.woff2") format("woff2");
+  src: url("/fonts/lato-v24-latin-700.woff2") format("woff2");
 }
 
 @font-face {
@@ -11,7 +11,7 @@
   font-family: "Atkinson Hyperlegible";
   font-style: normal;
   font-weight: 400;
-  src: url("../fonts/Atkinson-Hyperlegible-Regular-102a.woff2") format("woff2");
+  src: url("/fonts/Atkinson-Hyperlegible-Regular-102a.woff2") format("woff2");
 }
 
 :root {
@@ -41,6 +41,7 @@
   --small: 384px;
   --extra-small: 192px;
   /* Colors */
+  color-scheme: light dark;
   --black: #090909;
   --white: #f9f9f9;
 }
@@ -115,8 +116,8 @@
 }
 
 body {
-  background: var(--white);
-  color: var(--black);
+  background-color: light-dark(var(--white), var(--black));
+  color: light-dark(var(--black), var(--white));
 }
 
 section {
@@ -157,13 +158,13 @@ ul {
 }
 
 mark {
-  background: var(--black);
-  color: var(--white);
+  background: light-dark(var(--black), var(--white));
+  color: light-dark(var(--white), var(--black));
 }
 
 hr {
   border: none;
-  border-bottom: 2px solid var(--black);
+  border-bottom: 2px solid light-dark(var(--black), var(--white));
   max-width: var(--extra-small);
   margin: 0 auto;
 }
