--- a/src/components/Work.astro
+++ b/src/components/Work.astro
@@ -201,13 +201,14 @@ const work = [
   }
 
   .header {
+    align-items: center;
     display: grid;
     grid-gap: var(--space-m);
     grid-template-columns: repeat(auto-fit, minmax(min(100%, 350px), 1fr));
   }
 
   #spotify-container {
-    border: 1px dashed var(--black);
+    border: 1px dashed light-dark(var(--black), var(--white));
     border-radius: 12px;
     height: 352px;
     display: flex;
@@ -256,7 +257,8 @@ const work = [
   }
 
   .cover-artwork {
-    box-shadow: 0px 12px 24px -12px rgba(0, 0, 0, 0.5);
+    box-shadow: 0px 12px 24px -12px
+      light-dark(rgba(0, 0, 0, 0.5), rgba(255, 255, 255, 0.5));
     height: 350px;
     object-fit: cover;
     transition: outline-offset 0.25s ease;
